--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "cheerio": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "https": "^1.0.0"
+    "https": "^1.0.0",
+    "ssh2": "^1.17.0"
   },
   "engines": {
     "node": "22.x"
